--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,171 +1,674 @@
-* {
-    padding: 0;
-    margin: 0;
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+p,
+blockquote,
+dl,
+dt,
+dd,
+ul,
+ol,
+li,
+pre,
+form,
+fieldset,
+legend,
+button,
+input,
+textarea,
+th,
+td {
+  margin: 0;
+  padding: 0;
+}
+body,
+button,
+input,
+select,
+textarea {
+  font: 12px/1.6em Microsoft YaHei, Tahoma, simsun;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: 100%;
+}
+button,
+input,
+select,
+textarea {
+  font-size: 100%;
+}
+address,
+cite,
+dfn,
+em,
+var {
+  font-style: normal;
+}
+li {
+  list-style: none;
+}
+img {
+  border: 0;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+.clearfix:after {
+  content: "\20";
+  display: block;
+  height: 0;
+  clear: both;
+}
+.clearfix {
+  *zoom: 1;
+}
+.fl {
+  float: left;
+}
+.fr {
+  float: right;
+}
+.dn {
+  display: none !important;
+}
+.di {
+  display: inline;
+}
+.tac {
+  text-align: center;
+}
+.tar {
+  text-align: right;
+}
+.ofh {
+  overflow: hidden;
+}
+.pr {
+  position: relative;
+}
+.pa {
+  position: absolute;
+}
+.fwb {
+  font-weight: bold;
+}
+a {
+  color: #3a3f4a;
+  text-decoration: none;
+  outline: none;
+}
+a:hover {
+  color: #f74a4a;
+  text-decoration: underline;
+}
+a.noline:hover {
+  text-decoration: none;
+}
+a.underline {
+  text-decoration: underline;
+}
+a.more {
+  font-family: "\5b8b\4f53";
+}
+.d_gray,
+a.d_gray {
+  color: #616161;
+}
+.gray,
+a.gray {
+  color: #999;
+}
+.h_gray {
+  color: #e3e3e3;
+}
+.blue,
+a.blue {
+  color: #1994eb;
+}
+.red,
+a.red {
+  color: #f74a4a;
+}
+.green,
+a.green {
+  color: #329900;
+}
+.orange,
+a.orange {
+  color: #f50;
+}
+.hide {
+  width: 0;
+  height: 0;
+  display: block;
+  text-indent: -9999px;
+  overflow: hidden;
+}
+.i_sp {
+  background: url(../img/icon.png) no-repeat;
+}
+.bg_sp {
+  background: url(../img/bg.png) no-repeat;
+}
+.b_sp {
+  background: url(../img/btn.png) no-repeat;
 }
 
 body {
-    background: #f3f4f6 url(//js02.daoju.qq.com/common/images/wrap_bg.png) no-repeat 0 185px;
-    color: #3a3f4a;
+  background: #f3f4f6 url(//js02.daoju.qq.com/common/images/wrap_bg.png)
+    no-repeat 0 185px;
+  color: #3a3f4a;
 }
-body, button, input, select, textarea {
-    font: 12px/1.6em Microsoft YaHei,Tahoma,simsun;
+.wrap {
+  width: 1190px;
+  margin-left: auto;
+  margin-right: auto;
 }
-ul {
-    list-style: none;
+.w230 {
+  width: 230px;
 }
-a{
-    color: #3a3f4a;
-    text-decoration: none;
-    outline: none;
-    
+.w240 {
+  width: 240px;
 }
-// 精灵图
-.i_sp{
-    background: url(../img/icon.png) no-repeat;
+.w405 {
+  width: 405px;
 }
-// 版心
-.wrap{
-    width: 1190px;
-    margin-left: auto;
-    margin-right: auto;
+.w440 {
+  width: 440px;
 }
-// i公共样式
-i{
-    font-style: italic;
+.w490 {
+  width: 490px;
 }
-// 左浮动
-.fl{
-    float: left;
+.w775 {
+  width: 775px;
 }
-// 又浮动
-.fr{
-    float: right;
+.w950 {
+  width: 950px;
 }
+.mt10 {
+  margin-top: 10px;
+}
+.mt20 {
+  margin-top: 20px;
+}
+.mr5 {
+  margin-right: 5px;
+}
+.mr10 {
+  margin-right: 10px;
+}
+.mr15 {
+  margin-right: 15px;
+}
+.mr20 {
+  margin-right: 20px;
+}
+.mb10 {
+  margin-bottom: 10px;
+}
+.mb20 {
+  margin-bottom: 20px;
+}
+.mb30 {
+  margin-bottom: 30px;
+}
+.ml10 {
+  margin-left: 10px;
+}
+// dt
+dt {
+  display: block;
+}
+// 头部
 .header {
-    background: #f9f9f9;
+  background: #f9f9f9;
+  height: 30px;
+  line-height: 30px;
+  color: #666;
+
+  .lefthead {
     height: 30px;
-    line-height: 30px;
-    color: #666;
-
-    .lefthead{
-        height: 30px;
-        overflow: hidden;
-
-        a{
-            color: #666;
-            float: left;
-        }
-        .i_mobile{
-            float: left;
-            width: 11px;
-            height: 16px;
-            background-position: 0 0;
-            margin: 7px 3px 0 0;
-        }
-        i{
-            color: #e7e7e7;
-            font-style: normal;
-            margin: 0 10px;
-            float: left;
-        }
-        
-    }
-}
-.righthead{
-    width: 600px;
-
-    a{
-        float: right;
-    }
-    i{
-        float: right;
-        color: #e7e7e7;
-        font-style: normal;
-        margin: 0 10px;
-    }
-    .game_menu{
-        background-position: -20px -334px;
-        width: 72px;
-        height: 21px;
-        line-height: 21px;
-        margin-top: 5px;
-        padding-left: 8px;
-    }
-    .game_pop {
-        position: absolute;
-        width: 622px;
-        height: 500px;
-        top: 26px;
-        right: 0;
-        z-index: 20;
-        display: none;
-    }
-
-}
-
-.nav {
-    width: 100%;
-    height: 60px;
-    background-color: #abcdef;
-}
-
-
-.banner {
-    width: 1190px;
-    margin: 0px auto;
-}
-
-.menu {
-    position: relative;
-    z-index: 3;
-}
-
-.menu ul {
     overflow: hidden;
-    padding: 10px 0;
-    height: 450px;
-    background-color: #fefefe;
-    color: #636363;
-    margin-top: 10px;
-    width: 190px;
-}
 
-.menu ul li {
-    height: 25px;
-    line-height: 25px;
-    padding-left: 18px;
+    a {
+      color: #666;
+      float: left;
+    }
+    .i_mobile {
+      float: left;
+      width: 11px;
+      height: 16px;
+      background-position: 0 0;
+      margin: 7px 3px 0 0;
+    }
+    i {
+      color: #e7e7e7;
+      font-style: normal;
+      margin: 0 10px;
+      float: left;
+    }
+  }
 }
+.righthead {
+  width: 600px;
 
-.menu ul li.active {
-    background-color: #d9d9d9;
-}
-
-.menu li a {
-    font-size: 14px;
-    color: #333;
-    text-decoration: none;
-}
-
-.menu li span {
-    padding: 0 2px;
-    font-size: 12px;
-}
-
-.cartlist {
+  a {
+    float: right;
+  }
+  i {
+    float: right;
+    color: #e7e7e7;
+    font-style: normal;
+    margin: 0 10px;
+  }
+  .game_menu {
+    background-position: -20px -334px;
+    width: 72px;
+    height: 21px;
+    line-height: 21px;
+    margin-top: 5px;
+    padding-left: 8px;
+  }
+  .game_pop {
     position: absolute;
-    left: 191px;
-    top: 0;
-    width: 998px;
-    min-height: 468px;
-    border: 1px solid #f7f7f7;
-    background-color: #fff;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, .3);
+    width: 622px;
+    height: 500px;
+    top: 26px;
+    right: 80px;
+    z-index: 50;
     display: none;
-    transition: top 0.3s ease;
-
+  }
+  .login {
+    position: relative;
+  }
 }
 
-.item {
-    padding: 20px;
-    display: none;
+// 搜索框
+.search {
+  padding: 10px 0 20px;
+  background: #fff;
+  // logo
+  .logo {
+    width: 320px;
+    height: 65px;
+    display: block;
+    text-indent: -9999px;
+    margin-top: 5px;
+  }
+  // 搜索栏
+  .s_bar {
+    margin-top: 10px;
+    margin-left: 110px;
+    display: inline;
+    width: 490px;
+
+    // 范围
+    .s_text {
+      border: 2px solid #f74a4a;
+      width: 450px;
+      height: 34px;
+      border-right: 0;
+
+      .s_menu {
+        position: relative;
+        z-index: 30;
+
+        .aaa {
+          float: left;
+          display: block;
+          width: 116px;
+          height: 31px;
+          border-right: 1px solid #efefef;
+          border-bottom: 3px solid #efefef;
+          text-align: center;
+          line-height: 31px;
+          color: #333;
+          s {
+            float: right;
+            width: 10px;
+            height: 6px;
+            overflow: hidden;
+            background-position: 0 -25px;
+            margin: 15px 10px 0 0;
+            *margin-top: 13px;
+            display: inline;
+            z-index: 20;
+          }
+        }
+
+        .choose_sub {
+          display: none;
+          position: absolute;
+          z-index: 1;
+          top: 36px;
+          left: 0;
+          border: 1px solid #e5e5e5;
+          width: 395px;
+          padding: 0 10px;
+          background: #fff;
+          overflow: hidden;
+
+          dl {
+            border-top: 1px solid #e5e5e5;
+            padding: 10px;
+            margin-top: -1px;
+            line-height: 26px;
+
+            dt {
+              font-weight: 800;
+              float: left;
+            }
+            dd {
+              margin-left: 70px;
+              overflow: hidden;
+
+              a,
+              i {
+                display: block;
+                float: left;
+                white-space: nowrap;
+              }
+              a {
+                color: #3a3f4a;
+                text-decoration: none;
+                outline: none;
+              }
+              i {
+                font-style: normal;
+                margin: 0 5px;
+              }
+            }
+          }
+        }
+      }
+
+      input {
+        float: left;
+        width: 313px;
+        padding: 2px 10px 0 10px;
+        height: 32px;
+        line-height: 30px;
+        border: 0;
+        color: #aaa8a8;
+      }
+    }
+
+    .btn {
+      float: right;
+      width: 38px;
+      height: 38px;
+      text-indent: -9999px;
+      display: block;
+      border: 0;
+      cursor: pointer;
+    }
+    .words p {
+      padding-top: 5px;
+      clear: both;
+      height: 24px;
+    }
+  }
+
+  // 右侧二维码
+  .bg_znq {
+    background: url(../img/codeznq.png) no-repeat;
+    background-position: 0 0;
+    width: 229px;
+    margin: -10px 0 -20px;
+    position: relative;
+    // overflow: hidden;
+    height: 108px;
+  }
+}
+// 导航
+.nav {
+  background: #3a3f4a;
+  height: 54px;
+  color: #acb1bb;
+  -moz-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.08);
+  -webkit-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.08);
+  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.08);
+  .all_game {
+    width: 190px;
+    position: relative;
+    z-index: 30;
+    .show_game {
+      color: #acb1bb;
+      font: 16px/32px "Microsoft Yahei", "黑体";
+      display: block;
+      height: 41px;
+      padding-top: 10px;
+      border-bottom: 3px solid #3a3f4a;
+      position: relative;
+      .i_game_down {
+        float: right;
+        width: 9px;
+        height: 10px;
+        overflow: hidden;
+        background-position: 0 -40px;
+        margin: 12px 30px 0 0;
+        display: inline;
+      }
+      p {
+        margin-left: 35px;
+        width: 110px;
+      }
+    }
+    .box {
+      position: absolute;
+      top: 0;
+      left: 0;
+      text-align: left;
+      // display: none;
+      .top .i_sp {
+        margin-top: 14px;
+      }
+      .top dt {
+        background: #eb4c4c;
+        color: #ff9191;
+        height: 54px;
+        line-height: 54px;
+        border: 0;
+        width: 190px;
+
+        .i_game {
+          background-position: 6px -178px;
+        }
+      }
+      .i_mobilegame {
+        background-position: -148px -178px;
+      }
+      .i_rpggame {
+        background-position: -28px -178px;
+      }
+      .i_tournament {
+        background-position: -60px -178px;
+      }
+      .i_leisure {
+        background-position: -88px -178px;
+      }
+      .i_webgame {
+        background-position: -119px -178px;
+      }
+      .i_sp {
+        float: left;
+        width: 25px;
+        height: 25px;
+        margin: 21px 10px 0 22px;
+      }
+
+      dt {
+        width: 189px;
+        height: 64px;
+        font: 16px/64px "Microsoft Yahei", "黑体";
+        background: #f55656;
+        color: #fff;
+        border: 1px solid #f55656;
+        border-bottom: 1px solid #ee4545;
+        border-right: 0;
+        position: relative;
+        cursor: pointer;
+        -moz-box-shadow: 2px 0 0 rgba(0, 0, 0, 0.08);
+        -webkit-box-shadow: 2px 0 0 rgba(0, 0, 0, 0.08);
+        box-shadow: 2px 0 0 rgba(0, 0, 0, 0.08);
+        i {
+          display: block;
+          width: 8px;
+          height: 11px;
+          background-position: -178px -178px;
+          position: absolute;
+          top: 8px;
+          right: -10px;
+          overflow: hidden;
+        }
+      }
+      dd {
+        position: absolute;
+        top: 54px;
+        left: 190px;
+        display: none;
+        background: #fff;
+        border: 1px solid #e5e5e5;
+        width: 125px;
+        border-left: 0;
+        padding: 6px 0 7px 0;
+        overflow: hidden;
+        .dev {
+          float: left;
+          display: inline;
+        }
+        a {
+          display: block;
+          width: 95px;
+          height: 35px;
+          font: 14px/35px "Microsoft Yahei", "黑体";
+          padding: 0 15px;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+        }
+        .inner {
+          background: url(../img/nav_box.png) repeat-y -8px 0;
+          height: 315px;
+        }
+      }
+      .col_2 {
+        width: 251px;
+      }
+      .col_3 {
+        width: 377px;
+      }
+    }
+  }
+  //
+  ul {
+    width: 760px;
+    float: left;
+    // height: 54px;
+    li:hover {
+      background: #ee4545;
+    }
+    li {
+      width: 126px;
+      text-align: center;
+      float: left;
+      height: 54px;
+      cursor: pointer;
+      a {
+        position: relative;
+        top: 10px;
+        color: #acb1bb;
+        font: 16px/32px "Microsoft Yahei", "黑体";
+        // cursor: pointer;
+      }
+    }
+  }
+  // 购物车
+  .cart {
+    width: 230px;
+    height: 54px;
+    background: #333;
+    a {
+      // display: inline-block;
+      // text-align: center;
+      float: left;
+      height: 30px;
+      padding: 8px 0;
+      width: 100%;
+      line-height: 30px;
+      color: #fff;
+      background: #ee4545;
+      position: relative;
+      top: 4px;
+      font-size: 16px;
+      i {
+        float: right;
+        width: 60px;
+        border-left: 1px solid #e04040;
+        font-style: normal;
+        font-weight: 800;
+        text-align: center;
+        font-size: 18px;
+      }
+      s {
+        float: left;
+        width: 20px;
+        height: 16px;
+        background-position: -60px -20px;
+        margin: 8px 8px 0 42px;
+        // display: inline;
+      }
+    }
+  }
+}
+
+.lunbo {
+  // width: 770px;
+  // height: 330px;
+  // position: relative;
+  .lunbo1 {
+    width: 770px;
+    // overflow: hidden;
+    margin-left: 190px;
+    ul {
+      width: 4620px;
+      height: 330px;
+      // margin-left: 190px;
+      position: relative;
+      li {
+        float: left;
+        // width: 770px;
+        img {
+          width: 770px;
+          height: 330px;
+          display: block;
+        }
+        p {
+          position: absolute;
+          width: 750px;
+          padding: 0 10px;
+          height: 40px;
+          line-height: 40px;
+          color: #fff;
+          bottom: 0;
+          left: 0;
+          background: rgba($color: #000000, $alpha: 0.3);
+        }
+      }
+    }
+    ol{
+      position: absolute;
+    };
+  }
 }
